--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,53 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".LoginActivity" android:background="@color/darkestBlue">
-
-
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:paddingLeft="8dp"
-            android:id="@+id/editText_email_login" android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent" android:hint="Email" android:background="@drawable/rounded_edittext_login_registration"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:paddingLeft="8dp"
-            android:id="@+id/editText_password_login" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_email_login"
-            app:layout_constraintStart_toStartOf="@+id/editText_email_login"
-            app:layout_constraintEnd_toEndOf="@+id/editText_email_login" android:background="@drawable/rounded_edittext_login_registration"
-            android:hint="Password"/>
-    <Button
-            android:text="LOG IN"
-            android:layout_width="0dp"
-            android:layout_height="47dp"
-            android:id="@+id/button_login_login" android:layout_marginTop="64dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_password_login"
-            app:layout_constraintStart_toStartOf="@+id/editText_password_login"
-            app:layout_constraintEnd_toEndOf="@+id/editText_password_login" android:textSize="18sp"
-            android:background="@drawable/rounded_button_register_login" android:layout_marginStart="16dp"
-            android:textColor="@color/darkestBlue"
-            android:textStyle="bold"
-            android:layout_marginEnd="16dp"/>
-    <TextView
-            android:text="Back to login"
-            android:layout_width="wrap_content"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".RegistrationActivity">
+    <android.support.constraint.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView_backToReg_login" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/button_login_login"
-            app:layout_constraintStart_toStartOf="@+id/button_login_login"
-            app:layout_constraintEnd_toEndOf="@+id/button_login_login" android:textColor="@color/lightBlue"
-            android:textSize="18dp"/>
-</android.support.constraint.ConstraintLayout>
+            tools:context=".LoginActivity" android:background="@color/darkestBlue">
+
+
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:paddingLeft="8dp"
+                android:id="@+id/editText_email_login" android:layout_marginTop="48dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
+                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/edittext_email_hint_registration"
+                android:background="@drawable/rounded_edittext_login_registration"/>
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:paddingLeft="8dp"
+                android:id="@+id/editText_password_login" android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText_email_login"
+                app:layout_constraintStart_toStartOf="@+id/editText_email_login"
+                app:layout_constraintEnd_toEndOf="@+id/editText_email_login"
+                android:background="@drawable/rounded_edittext_login_registration"
+                android:hint="@string/edittext_password_hint_registration"/>
+        <Button
+                android:text="@string/button_log_in_login"
+                android:layout_width="0dp"
+                android:layout_height="47dp"
+                android:id="@+id/button_login_login" android:layout_marginTop="64dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText_password_login"
+                app:layout_constraintStart_toStartOf="@+id/editText_password_login"
+                app:layout_constraintEnd_toEndOf="@+id/editText_password_login" android:textSize="18sp"
+                android:background="@drawable/rounded_button_register_login" android:layout_marginStart="16dp"
+                android:textColor="@color/darkestBlue"
+                android:textStyle="bold"
+                android:layout_marginEnd="16dp"/>
+        <TextView
+                android:text="@string/textview_back_to_registration_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_backToReg_login" android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/button_login_login"
+                app:layout_constraintStart_toStartOf="@+id/button_login_login"
+                app:layout_constraintEnd_toEndOf="@+id/button_login_login" android:textColor="@color/lightBlue"
+                android:textSize="18dp"/>
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
