--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,62 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".RegistrationActivity" android:background="@color/darkestBlue">
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:paddingLeft="8dp"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/editText_username_registration" android:layout_marginStart="32dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toTopOf="parent" android:hint="Username" android:background="@drawable/rounded_edittext_login_registration"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:paddingLeft="8dp"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/editText_email_registration" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_username_registration"
-            app:layout_constraintStart_toStartOf="@+id/editText_username_registration"
-            app:layout_constraintEnd_toEndOf="@+id/editText_username_registration" android:hint="Email"
-            android:background="@drawable/rounded_edittext_login_registration"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:paddingLeft="8dp"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/editText_password_registration" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_email_registration"
-            app:layout_constraintStart_toStartOf="@+id/editText_email_registration"
-            app:layout_constraintEnd_toEndOf="@+id/editText_email_registration"
-            android:background="@drawable/rounded_edittext_login_registration" android:hint="Password"/>
-    <Button
-            android:text="REGISTER"
-            android:layout_width="0dp"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".RegistrationActivity">
+    <android.support.constraint.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/button_register_registration" android:layout_marginTop="64dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_password_registration"
-            app:layout_constraintStart_toStartOf="@+id/editText_password_registration"
-            app:layout_constraintEnd_toEndOf="@+id/editText_password_registration" android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp" android:background="@drawable/rounded_button_register_login"
-            android:textColor="@color/darkestBlue"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
-    <TextView
-            android:text="Already have an account?"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView_alreadyHaveAcc_registration"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/button_register_registration"
-            app:layout_constraintStart_toStartOf="@+id/button_register_registration"
-            app:layout_constraintEnd_toEndOf="@+id/button_register_registration" android:textColor="@color/lightBlue"
-            android:textSize="18sp"/>
-</android.support.constraint.ConstraintLayout>
+            tools:context=".RegistrationActivity" android:background="@color/darkestBlue">
+        <Button
+                android:text="@string/button_select_image_registration"
+                android:layout_width="150dp"
+                android:layout_height="150dp" android:id="@+id/button_select_image_register"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/rounded_button_select_image"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"/>
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:paddingLeft="8dp"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/editText_username_registration" android:layout_marginStart="32dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
+                android:hint="@string/edittext_username_hint_registration" android:background="@drawable/rounded_edittext_login_registration"
+                app:layout_constraintTop_toBottomOf="@+id/button_select_image_register"/>
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:paddingLeft="8dp"
+                android:inputType="textEmailAddress"
+                android:ems="10"
+                android:id="@+id/editText_email_registration" android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText_username_registration"
+                app:layout_constraintStart_toStartOf="@+id/editText_username_registration"
+                app:layout_constraintEnd_toEndOf="@+id/editText_username_registration" android:hint="@string/edittext_email_hint_registration"
+                android:background="@drawable/rounded_edittext_login_registration"/>
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:paddingLeft="8dp"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/editText_password_registration" android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText_email_registration"
+                app:layout_constraintStart_toStartOf="@+id/editText_email_registration"
+                app:layout_constraintEnd_toEndOf="@+id/editText_email_registration"
+                android:background="@drawable/rounded_edittext_login_registration" android:hint="@string/edittext_password_hint_registration"/>
+        <Button
+                android:text="@string/button_register_registration"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/button_register_registration" android:layout_marginTop="64dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText_password_registration"
+                app:layout_constraintStart_toStartOf="@+id/editText_password_registration"
+                app:layout_constraintEnd_toEndOf="@+id/editText_password_registration" android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp" android:background="@drawable/rounded_button_register_login"
+                android:textColor="@color/darkestBlue"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
+        <TextView
+                android:text="@string/textview_already_have_an_account_registration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView_alreadyHaveAcc_registration"
+                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/button_register_registration"
+                app:layout_constraintStart_toStartOf="@+id/button_register_registration"
+                app:layout_constraintEnd_toEndOf="@+id/button_register_registration"
+                android:textColor="@color/lightBlue"
+                android:textSize="18sp"/>
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
