--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,14 +4,14 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".RegistrationActivity">
+            tools:context=".RegistrationActivity" android:background="@color/darkestBlue">
     <android.support.constraint.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".LoginActivity" android:background="@color/darkestBlue">
+            tools:context=".LoginActivity">
 
 
         <EditText
@@ -20,11 +20,11 @@
                 android:inputType="textEmailAddress"
                 android:ems="10"
                 android:paddingLeft="8dp"
-                android:id="@+id/editText_email_login" android:layout_marginTop="48dp"
+                android:id="@+id/editText_email_login"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
                 app:layout_constraintEnd_toEndOf="parent" android:hint="@string/edittext_email_hint_registration"
-                android:background="@drawable/rounded_edittext_login_registration"/>
+                android:background="@drawable/rounded_edittext_login_registration" android:layout_marginTop="150dp"/>
         <EditText
                 android:layout_width="0dp"
                 android:layout_height="50dp"
@@ -41,7 +41,7 @@
                 android:text="@string/button_log_in_login"
                 android:layout_width="0dp"
                 android:layout_height="47dp"
-                android:id="@+id/button_login_login" android:layout_marginTop="64dp"
+                android:id="@+id/button_login_login" android:layout_marginTop="128dp"
                 app:layout_constraintTop_toBottomOf="@+id/editText_password_login"
                 app:layout_constraintStart_toStartOf="@+id/editText_password_login"
                 app:layout_constraintEnd_toEndOf="@+id/editText_password_login" android:textSize="18sp"
@@ -57,6 +57,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/button_login_login"
                 app:layout_constraintStart_toStartOf="@+id/button_login_login"
                 app:layout_constraintEnd_toEndOf="@+id/button_login_login" android:textColor="@color/lightBlue"
-                android:textSize="18dp"/>
+                android:textSize="18dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="24dp"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
