--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,14 +4,14 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".RegistrationActivity">
+            tools:context=".RegistrationActivity" android:background="@color/darkestBlue">
     <android.support.constraint.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".RegistrationActivity" android:background="@color/darkestBlue">
+            android:layout_height="match_parent"
+            tools:context=".RegistrationActivity">
         <Button
                 android:text="@string/button_select_image_registration"
                 android:layout_width="150dp"
@@ -57,7 +57,6 @@
                 app:layout_constraintEnd_toEndOf="@+id/editText_email_registration"
                 android:background="@drawable/rounded_edittext_login_registration"
                 android:hint="@string/edittext_password_hint_registration"/>
-
 
 
         <Button
