--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,13 +21,24 @@
             android:contentDescription="@string/nav_header_desc"
             android:id="@+id/imageView_avatar_nav_header"/>
 
-    <TextView
+    <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:text="@string/nav_header_title"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:id="@+id/textView_username_nav_header"/>
+            android:weightSum="1">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="@dimen/nav_header_vertical_spacing"
+                android:text="@string/nav_header_title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:id="@+id/textView_username_nav_header"
+                android:layout_weight="0.3"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" android:id="@+id/textView_log_in_sign_out_nav_header"
+                android:layout_weight="0.7" android:text="@string/sign_out_text" android:textAlignment="textEnd"/>
+    </LinearLayout>
 
     <TextView
             android:layout_width="wrap_content"
