--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,14 +4,14 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".RegistrationActivity" android:background="@color/darkestBlue" android:id="@+id/scrollView2">
+            tools:context=".Login.RegistrationActivity" android:background="@color/darkestBlue" android:id="@+id/scrollView2">
     <android.support.constraint.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".LoginActivity">
+            tools:context=".Login.LoginActivity">
 
 
         <EditText
