--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,14 +4,14 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".RegistrationActivity" android:background="@color/darkestBlue">
+            tools:context=".Login.RegistrationActivity" android:background="@color/darkestBlue">
     <android.support.constraint.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".RegistrationActivity">
+            tools:context=".Login.RegistrationActivity">
         <Button
                 android:text="@string/button_select_image_registration"
                 android:layout_width="150dp"
