--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,22 +7,14 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_main"
+        android:id="@+id/contentMainLinearLayout"
         tools:context=".MainActivity"
         android:orientation="vertical">
 
-    <android.support.design.widget.TabLayout
+    <FrameLayout
+            android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabMode="fixed"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="@color/lightBlue"
-            android:id="@+id/tabLayout"
-            android:background="@color/darkBlue"
-            app:tabTextColor="@color/lightestBlue"/>
+            android:layout_height="match_parent"/>
 
-    <android.support.v4.view.ViewPager
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/viewPager"/>
 
 </LinearLayout>
