--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,9 +17,9 @@
                 android:icon="@android:drawable/ic_menu_info_details"
                 android:title="@string/text_about"/>
         <item
-                android:id="@+id/nav_manage"
-                android:icon="@drawable/ic_menu_manage"
-                android:title="Tools"/>
+                android:id="@+id/nav_exhibitors"
+                android:icon="@drawable/ic_tag_presentation"
+                android:title="Exhibitors"/>
     </group>
 
     <item android:title="Communicate">
